# lot-split-feasibility

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
app/adapters/: arcgis.py  base.py  ingestion.py  normalizer.py  zoning_mapper.py
app/api/: app.py  schemas.py
app/api/routes/: feasibility.py  parse.py  split.py
app/engine/: calculator.py  constraints.py  eligibility.py  geometry.py  inputs.py  manual_split.py  types.py
app/engine/strategies/: flag_lot.py  simple_halve.py
app/models/: __init__.py  environmental_constraint.py  feasibility_report.py  jurisdiction.py  parcel.py  report.py  subdivision_scenario.py  zoning_district.py
app/parsers/: geojson.py  kml.py  projection.py  shapefile.py
app/scoring/: scoring.py
app/static/: app.js  index.html  style.css
app/static/assets/: index-8pWBvKfj.js  index-BDvLF8mV.js  index-BJs_uur0.js  index-BW2uJpTH.js  index-BbY1hi2R.js  index-BmUmOVM8.js  index-BnfSGcYM.js  index-C8fK1JLh.js  index-CAUYkQ9y.js  index-CzL7Qs83.js  index-DI6KwUD5.js  index-Da0gI9V-.js  index-Zhe_4FO0.js  index-fbUzb4Yt.js
data/kyle_parcels/: R110479.geojson  R110483.geojson  R116228.geojson  R121309.geojson  R14820.geojson  R21445.geojson  R21446.geojson  R21450.geojson  R21451.geojson  R21452.geojson
docs/: architecture.md  pilot-jurisdiction.md
docs/superpowers/plans/: lot-split-feasibility-spec.md  (+4 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  config.js  main.jsx  theme.js
migrations/: env.py
migrations/versions/: a1f1873cc084_initial_schema.py  b2a3f91dc017_add_reports_table.py
scripts/: fetch_kyle_parcels.py  seed_hays_county.py  validate_parcels.py
tests/adapters/: test_arcgis_adapter.py  test_ingestion.py  test_normalizer.py  test_zoning_mapper.py
tests/api/: test_feasibility_endpoint.py  test_parse_endpoint.py  test_split_endpoint.py
tests/engine/: test_calculator.py  test_constraints.py  test_eligibility.py  test_engine_isolation.py  test_geometry.py  test_inputs.py  test_manual_split.py  test_strategies.py
tests/fixtures/: parcels.py
tests/models/: test_model_definitions.py
tests/parsers/: test_geojson.py  test_kml.py  test_projection.py
tests/scoring/: test_scoring.py
(+10 files in other folders)
