[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lot-split-feasibility"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "shapely>=2.0",
    "numpy>=1.26",
    "pyproj>=3.6",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.14",
    "fastapi>=0.110",
    "pydantic>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.29",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",
    "fastkml>=1.0",
    "fiona>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "httpx2>=0.28",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long — handled by line-length above
    "B008",  # do not perform function calls in default arguments (FastAPI uses this)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # scripts do sys.path.insert before app imports

[tool.hatch.build.targets.wheel]
packages = ["app"]
